app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

@theme {
  /* XTREEM PRO Colors */
  --color-primary-green: #aafc1c;
  --color-xp-green-dark: #a2bc15;
  --color-xp-green-deep: #829a0e;
  --color-xp-glow: #ecf3b8;
  --color-xp-black: #050505;
  --color-xp-white: #f1f1f0;

  /* Fonts */
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}


body {
  background: var(--background);
  color: var(--foreground);
  font-family: var(--font-sans), Arial, Helvetica, sans-serif;
}


.energy-ring {
  background: conic-gradient(
    from 0deg,
    #aafc1c,
    transparent,
    #aafc1c
  );

  filter: blur(25px);

  animation: spin 15s linear infinite;
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

